# sdpa-qd

./: ChangeLog  Makefile.am  Makefile.in  README.md  configure  configure.in  param.sdpa  sdpa_algebra.h  sdpa_dataset.cpp  sdpa_dataset.h  sdpa_io.cpp  sdpa_jordan.cpp  sdpa_jordan.h  sdpa_linear.cpp  sdpa_linear.h  sdpa_main.cpp  sdpa_newton.cpp  sdpa_newton.h  sdpa_parts.cpp  sdpa_parts.h  sdpa_struct.cpp  sdpa_struct.h  sdpa_tool.cpp  sdpa_tool.h
mpack/: Mlsame.cpp  Mutils.cpp  Mxerbla.cpp  Raxpy.cpp  Rcopy.cpp  Rdot.cpp  Rgemm.cpp  Rgemv.cpp  Rger.cpp  Rlae2.cpp  Rlaev2.cpp  Rlamch.cpp  Rlanst.cpp  Rlansy.cpp  Rlapy2.cpp  Rlarf.cpp  Rlarfb.cpp  Rlarfg.cpp  Rlarft.cpp  Rlartg.cpp  Rlascl.cpp  Rlaset.cpp  Rlasr.cpp  Rlasrt.cpp  Rlassq.cpp  Rlatrd.cpp  Rnrm2.cpp  Rorg2l.cpp  Rorg2r.cpp  Rorgql.cpp  Rorgqr.cpp  Rorgtr.cpp  Rpotf2.cpp  Rpotrf.cpp  Rscal.cpp  Rsteqr.cpp  Rsterf.cpp  Rswap.cpp  Rsyev.cpp  Rsymv.cpp  (+13 more)
spooles/: Makefile
spooles/patches/: patch-TZ
